kubernete/cilium/mesh/5_advanced-gateway-api/14_demo-app.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: infra-backend-v1
spec:
  selector:
    app: infra-backend-v1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infra-backend-v1
  labels:
    app: infra-backend-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: infra-backend-v1
  template:
    metadata:
      labels:
        app: infra-backend-v1
    spec:
      containers:
        - name: infra-backend-v1
          # From https://github.com/kubernetes-sigs/ingress-controller-conformance/tree/master/images/echoserver
          image: gcr.io/k8s-staging-ingressconformance/echoserver:v20221109-7ee2f3e
          resources:
            requests:
              cpu: 10m
---
apiVersion: v1
kind: Service
metadata:
  name: infra-backend-v2
spec:
  selector:
    app: infra-backend-v2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infra-backend-v2
  labels:
    app: infra-backend-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: infra-backend-v2
  template:
    metadata:
      labels:
        app: infra-backend-v2
    spec:
      containers:
        - name: infra-backend-v2
          image: gcr.io/k8s-staging-ingressconformance/echoserver:v20221109-7ee2f3e
          resources:
            requests:
              cpu: 10m
