kubernete/cilium/mesh/5_advanced-gateway-api/21_redirect-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: redirect-path
spec:
  parentRefs:
    - name: cilium-gw
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /original-prefix
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /replacement-prefix
    - matches:
        - path:
            type: PathPrefix
            value: /path-and-host
      filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: example.org
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /replacement-prefix
    - matches:
        - path:
            type: PathPrefix
            value: /path-and-status
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /replacement-prefix
            statusCode: 301
    - matches:
        - path:
            type: PathPrefix
            value: /scheme-and-host
      filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: example.org
            scheme: "https"
